# k8s-playground

./: Makefile  README.md  docker-compose.yml  kind-cluster-config.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: ingress.yaml
chart/templates/client/: deployment.yaml  service.yaml
chart/templates/server/: db-migrate.yaml  deployment.yaml  postgres.yaml  service.yaml
client/: .dockerignore  Dockerfile  package.json  tailwind.config.js
client/src/routes/: +page.svelte
server/: Dockerfile  api.py  main.py  models.py  pyproject.toml  schema.py
server/alembic/: env.py
server/alembic/versions/: bb1c129e1f85_added_todos_table.py
